# treefi

./: .env_  .gitignore  README.md  flake.nix
.bruno/: bruno.json  check.bru
app/: .gitignore  .iex.exs  Dockerfile  fly.toml  mix.exs
app/assets/: package.json  tailwind.config.js
app/config/: config.exs  dev.exs  prod.exs  runtime.exs  test.exs
app/lib/: kc.ex  treefi_web.ex
app/lib/kc/: release.ex  repo.ex
app/lib/kc_web/: endpoint.ex  router.ex  telemetry.ex
app/lib/treefi/: accounts.ex  application.ex  mailer.ex  payments.ex  prices.ex
app/lib/treefi_web/: gettext.ex  router.ex  user_auth.ex
app/priv/repo/: seeds.exs
app/pwa/: package.json  pnpm-lock.yaml  vite.config.ts
app/pwa/src/: App.tsx
app/test/: test_helper.exs
app/test/support/: conn_case.ex  data_case.ex
app/test/treefi/: accounts_test.exs  payments_test.exs
app/test/treefi_web/: user_auth_test.exs
experiments/cost/: ape-config.yaml  pyproject.toml
experiments/tree_size/: README.md  package.json  pnpm-lock.yaml
sh/: db.sh  db_test.sh  setup.sh  start.sh
site/: .gitignore  Dockerfile  README.md  astro.config.mjs  fly.toml  mix.exs  package.json  pnpm-lock.yaml
site/assets/: tailwind.config.js
site/config/: config.exs  dev.exs  prod.exs  runtime.exs  test.exs
site/lib/: site_web.ex  treefi.ex  treefi_web.ex
site/lib/site/: application.ex  release.ex  (+1 more)
site/sh/: db.sh
site/src/: consts.ts
site/test/: test_helper.exs
vault/: ape-config.yaml  pyproject.toml
withdraw/: .dockerignore  Dockerfile  README.md  fly.toml  index.tsx  package.json  pnpm-lock.yaml
(+87 files in other folders)
